resolved layout issues

--- a/src/sass/base/_container.scss
+++ b/src/sass/base/_container.scss
@@ -1,17 +1,22 @@
- .container {
+.container {
+  max-width: 480px;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin: 0 auto;
 
-     max-width: 480px;
-     padding-left: 20px;
-     padding-right: 20px;
-     margin: 0 auto;
+  @media screen and (min-width: getSize(tablet)) {
+    max-width: 768px;
+    padding-left: 32px;
+    padding-right: 32px;
+  }
 
-     @media screen and (min-width: getSize(tablet)) {
-         max-width: 768px;
-         padding-left: 32px;
-         padding-right: 32px;
-     }
-
-     @media screen and (min-width: getSize(desktop)) {
-         max-width: 1280px;
-     }
- }
+  @media screen and (min-width: getSize(desktop)) {
+    max-width: 1280px;
+  }
+}
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 100vh;
+}
