--- a/src/sass/layouts/_footer.scss
+++ b/src/sass/layouts/_footer.scss
@@ -2,8 +2,6 @@
     width: 100%;
     padding-bottom: 28px;
     padding-top: 28px;
-    position: absolute;
-    bottom: 0;
     background-color: getColor(footer-bcg);
     font-weight: 400;
     @include lh(16px, 14px, 14px);
